# lmb-engine-simulator

./: .gitignore  Cargo.toml  G50_engine.json  README.md  air.json  air_lmb.json  cyl_1  cyl_1.txt  cyl_2.txt  cyl_3.txt  engine.json  engine_chang_2013.json  engine_performance.txt  gri30.json  old_engine.json  output  plenum_exhaust.txt  plenum_intake.txt  result  v_dv  valve_exhaust.txt  valve_intake.txt  valve_test_valve_exhaust  valve_test_valve_intake
doc/: search-index.js  settings.html
doc/hello/: all.html  index.html
doc/src/hello/: hello.rs.html
examples/: Ryobi_26_engine.rs
src/: lib.rs  main.rs  presentation_main.rs
src/base/: constants.rs  mod.rs
src/connector/: conn_core.rs  mod.rs  orifice.rs  valve.rs  zero_dim_conn.rs
src/core/: mod.rs  system.rs  system_builder.rs  traits.rs
src/doc/: mod.rs  ryobi_26cm3_engine.rs
src/engine/: README.md  engine.rs  json_reader.rs  mod.rs
src/numerics/: mod.rs  ode_solvers.rs
src/one_dim/: mod.rs  one_core.rs
src/reaction/: combustion.rs  gas.rs  json_data.rs  mod.rs  thermo.rs
src/zero_dim/: cylinder.rs  environment.rs  mod.rs  reservoir.rs  zero_core.rs
