[package]
name = "lmb_engine_simulator"
version = "0.1.0"
authors = ["Felipe A. F. Gomes, f.augustofgomes@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.34"
ndarray = { version = "0.13.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"